--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@
 
 <header class="flex flex-col items-center gap-4 p-8">
   <a href="/" class="text-2xl">Hosle Huseierforening</a>
-  <nav class="ml-auto flex items-center gap-8">
+  <nav class="ml-auto flex items-center gap-8 print:hidden">
     <a href="/" class="font-medium">Hjem</a>
     <a href="/handbok/beboer" class="font-medium">Beboerhåndbok</a>
     <a href="/handbok/styre" class="font-medium">Styrehåndbok</a>
