--- a/src/components/NewsArticleCard.astro
+++ b/src/components/NewsArticleCard.astro
@@ -16,7 +16,7 @@ const { title, image, slug, date } = Astro.props;
 
 <a href={`/nyhet/${slug}`} class="block w-full">
   <Card className="overflow-hidden">
-    <ContentfulImage asset={image} />
+    <ContentfulImage asset={image} width={480} aspectRatio={[4, 1]} />
     <div class="p-4">
       <h2 class="mb-4">{title}</h2>
       <time class="block text-gray-500 text-sm" datetime={date}
