--- a/src/components/LatestNewsBoxItem.astro
+++ b/src/components/LatestNewsBoxItem.astro
@@ -8,7 +8,7 @@ const article = newsArticles[0];
 ---
 
 <a href="#" class="group flex items-start gap-4 py-4">
-  <div class="flex-shrink-0 w-16 h-16 rounded-xl overflow-hidden relative mt-1">
+  <div class="flex-shrink-0 w-16 h-16 rounded-xl overflow-hidden relative">
     <img
       src={generateImageUrl(article.fields.image, 128, 1)}
       alt={article.fields.image.fields.title}
