Legg til facebook-gruppe

--- a/src/components/ImportantDatesBox.astro
+++ b/src/components/ImportantDatesBox.astro
@@ -26,7 +26,7 @@ import LatestNewsBoxItem from "./LatestNewsBoxItem.astro";
         class="flex-shrink-0 w-12 h-12 rounded-xl overflow-hidden relative bg-sky-700 text-white font-montserrat flex flex-col items-center justify-center leading-4"
       >
         <span>14</span>
-        <span>mar</span>
+        <span>jul</span>
       </div>
       <div>
         <h2 class="font-bold font-montserrat leading-5">Vårdugnad</h2>
@@ -54,7 +54,7 @@ import LatestNewsBoxItem from "./LatestNewsBoxItem.astro";
         class="flex-shrink-0 w-12 h-12 rounded-xl overflow-hidden relative bg-sky-700 text-white font-montserrat flex flex-col items-center justify-center leading-4"
       >
         <span>14</span>
-        <span>mar</span>
+        <span>des</span>
       </div>
       <div>
         <h2 class="font-bold font-montserrat leading-5">Høstdugnad</h2>
