--- a/src/components/UsefulInfoBox.astro
+++ b/src/components/UsefulInfoBox.astro
@@ -17,6 +17,17 @@ import LatestNewsBoxItem from "./LatestNewsBoxItem.astro";
         >
       </p>
     </div>
+    <div class="col-span-2">
+      <h2 class="text-xs text-gray-500">Facebook-gruppe</h2>
+      <p class="font-bold">
+        <a
+          href="https://www.facebook.com/groups/196648104164297"
+          target="_blank"
+          class="hover:text-rose-600 transition-colors duration-700"
+          >facebook.com/groups/196648104164297</a
+        >
+      </p>
+    </div>
     <div>
       <h2 class="text-xs text-gray-500">Felleskostnad</h2>
       <p class="font-bold">2 190,-/mnd</p>
