--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 ---
 ---
 
-<header class="flex flex-col items-center gap-4 p-8">
+<header class="flex items-center gap-4 p-8 border-b border-gray-200 mb-8">
   <a href="/" class="text-2xl">Hosle Huseierforening</a>
   <nav class="ml-auto flex items-center gap-8 print:hidden">
     <a href="/" class="font-medium">Hjem</a>
