--- a/src/components/LatestNewsBox.astro
+++ b/src/components/LatestNewsBox.astro
@@ -1,7 +1,8 @@
 ---
 import { getLatestNewsArticles } from "../lib/data";
-import { generateImageUrl } from "../lib/images";
 import LatestNewsBoxItem from "./LatestNewsBoxItem.astro";
+
+const articles = await getLatestNewsArticles();
 ---
 
 <div class="rounded-xl border border-stone-200 px-8 py-4">
@@ -9,9 +10,6 @@ import LatestNewsBoxItem from "./LatestNewsBoxItem.astro";
     Siste nytt
   </h2>
   <div class="divide-y">
-    <LatestNewsBoxItem />
-    <LatestNewsBoxItem />
-    <LatestNewsBoxItem />
-    <LatestNewsBoxItem />
+    {articles.map((article) => <LatestNewsBoxItem {...article.fields} />)}
   </div>
 </div>
