--- a/src/components/LatestNewsBoxItem.astro
+++ b/src/components/LatestNewsBoxItem.astro
@@ -1,17 +1,24 @@
 ---
-import { getLatestNewsArticles } from "../lib/data";
+import type { Asset } from "contentful";
+import { format, parseISO } from "date-fns";
+import nb from "date-fns/locale/nb";
 import { generateImageUrl } from "../lib/images";
 
-const newsArticles = await getLatestNewsArticles();
+type Props = {
+  image: Asset;
+  title: string;
+  date: string;
+  slug: string;
+};
 
-const article = newsArticles[0];
+const { image, title, date, slug } = Astro.props;
 ---
 
-<a href="#" class="group flex items-start gap-4 py-4">
+<a href={`/nyhet/${slug}`} class="group flex items-start gap-4 py-4">
   <div class="flex-shrink-0 w-16 h-16 rounded-xl overflow-hidden relative">
     <img
-      src={generateImageUrl(article.fields.image, 128, 1)}
-      alt={article.fields.image.fields.title}
+      src={generateImageUrl(image, 128, 1)}
+      alt={image.fields.title}
       class="w-16 h-16 group-hover:scale-105 transition-transform duration-700"
     />
   </div>
@@ -19,10 +26,10 @@ const article = newsArticles[0];
     <h2
       class="font-bold font-montserrat group-hover:text-rose-600 transition-colors duration-700 leading-5"
     >
-      Styret informerer - desember 2022
+      {title}
     </h2>
-    <time class="text-gray-500 text-xs" datetime="1970-01-01"
-      >1. januar 1970</time
+    <time class="text-gray-500 text-xs" datetime={date}
+      >{format(parseISO(date), "d. MMMM yyyy", { locale: nb })}</time
     >
   </div>
 </a>
