--- a/src/components/LatestNewsBoxItem.astro
+++ b/src/components/LatestNewsBoxItem.astro
@@ -1,7 +1,7 @@
 ---
 import type { Asset } from "contentful";
 import { format, parseISO } from "date-fns";
-import nb from "date-fns/locale/nb";
+import nb from "date-fns/locale/nb/index.js";
 import { generateImageUrl } from "../lib/images";
 
 type Props = {
